--- a/html_css/作业/作业1/test1.html
+++ b/html_css/作业/作业1/test1.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-    <table cellspacing="0" cellpadding="0" border="1">
+    <table cellspacing="0" cellpadding="0" style="border-collapse:collapse" border="1">
         <thead>
             <tr align="center" height="50px">
                 <td colspan="7">个人简历</td>
