--- a/html_css/作业/注册页面/register.html
+++ b/html_css/作业/注册页面/register.html
@@ -8,20 +8,18 @@
     <link rel="stylesheet" href="style.css">
     <title>register</title>
 </head>
-
 <body>
-    <header>
-    </header>
-    <main>
-        <section class="left">
-            <article></article>
-            <article></article>
-            <article></article>
-            <article></article>
-        </section>
-        <aside class="right"></aside>
-    </main>
-    <footer></footer>
+    <div class="background">
+        <img src="./images/background.png" alt="">
+<div>
+    <div class="left left-main">
+        <p class="title">大数据任务追踪监控平台</p>
+    </div>
+    <div class="right">
+
+    </div>
+</div>
+</div>
 </body>
 
 </html>
