--- a/JavaScript/day09/4-表格操作.html
+++ b/JavaScript/day09/4-表格操作.html
@@ -41,6 +41,17 @@
             }
         }
     </script>
+    <style>
+        table,td,th{
+            border: 1px solid coral;
+            border-collapse:collapse
+        }
+        table{
+            width: 200px;
+            text-align: center
+        }
+
+    </style>
 </head>
 
 <body>
@@ -49,7 +60,7 @@
         <thead>
             <tr>
                 <th>学号</th>
-                <th>姓名</th>
+                <th width = "100px">姓名</th>
                 <th>年龄</th>
             </tr>
         </thead>
