--- a/JavaScript/day11/6-表格的增删改查.html
+++ b/JavaScript/day11/6-表格的增删改查.html
@@ -7,6 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>表格的增删改查</title>
     <style>
+        input[type = text]{
+            width: 80px
+        }
+        input[name = id]{
+            width: 40px;
+        }
+        input[name = name]{
+            width: 120px;
+        }
         table {
             border-collapse: collapse;
             width: 400px;
@@ -18,6 +27,7 @@
             border: 1px solid #ccc;
             text-align: center;
         }
+
     </style>
     <script>
         var stus = [{
@@ -58,7 +68,9 @@
                                 <td>` + item.name + `</td>
                                 <td>` + item.age + `</td>
                                 <td>` + item.gender + `</td>
-                                <td><button>删除</button> </td>
+                                <td><button class="delete">删除</button>
+                                    <button class="update">修改</button>
+                                 </td>
                             </tr>
                 `
             })
@@ -66,14 +78,14 @@
             // tbody给删除按钮做代理
             tbody.onclick = function () {
                 var target = event.target;
-                if (target.nodeName === 'BUTTON') {
+                if (target.className == 'delete') {
                     this.removeChild(target.parentNode.parentNode)
                 }
             }
             //批量删除
             batchDeleteBtn.onclick = function () {
                 // 获取所有的用户选中的input，循环删除对应的tr
-                var inputs = document.getElementsByTagName('input');
+                var inputs = document.getElementsByTagName('tbody')[0].getElementsByTagName('input');
                 inputs = Array.prototype.slice.call(inputs, 0);
                 var inputsRes = inputs.filter(function (item) {
                     return item.checked == true
@@ -86,13 +98,16 @@
                 }
             }
             addBtn.onclick = function () {
+                
                 var newTr = document.createElement('tr');
                 var str = `<tr>
                     <td><input type="checkbox"> </td>
                     <td>zwq</td>
                     <td>20</td>
                     <td>男</td>
-                    <td><button>删除</button> </td>
+                    <td><button class="delete">删除</button> 
+                        <button class="update">修改</button>
+                    </td>
                     </tr>`;
                 tbody.innerHTML += str;
             }
@@ -103,6 +118,13 @@
 <body>
     <button id="add">新增</button>
     <button id="batchdelete">批量删除</button>
+    <form action="">
+        <input type="text" name="id" id="" readonly>
+        <input type="text" name="name" id="" autofocus>
+        <input type="text" name="age" id="">
+        <input type="text" name="gender" id="">
+        <input type="submit" value="提交">
+    </form>
     <table>
         <thead>
             <tr>
@@ -124,6 +146,7 @@
             </tr> -->
         </tbody>
     </table>
+
 </body>
 
 </html>
