--- a/JavaScript/test/控制车辆.html
+++ b/JavaScript/test/控制车辆.html
@@ -11,9 +11,10 @@
             position: absolute;
             left: 100px;
             top: 100px;
-            width: 110px;
-            height: 165px;
-            background: url(./images/2.png)
+            width: 80px;
+            height: 160px;
+            background: url(./images/1.png) no-repeat;
+            background-size: contain;
         }
     </style>
     <script>
@@ -22,22 +23,24 @@
             speed = 20;
 
             function moveLeft() {
-                car.style.transform = 'rotateZ(270deg)'
-                car.style.left = car.offsetLeft - speed + 'px';
+                car.style.transform = 'rotateZ(270deg)';
+                if (car.offsetLeft > 0)
+                    car.style.left = car.offsetLeft - speed + 'px';
             }
 
             function moveUp() {
-                car.style.transform = 'rotateZ(0deg)'
-                car.style.top = car.offsetTop - speed + 'px';
+                car.style.transform = 'rotateZ(0deg)';
+                if (car.offsetTop > 0)
+                    car.style.top = car.offsetTop - speed + 'px';
             }
 
             function moveRight() {
-                car.style.transform = 'rotateZ(90deg)'
+                car.style.transform = 'rotateZ(90deg)';
                 car.style.left = car.offsetLeft + speed + 'px';
             }
 
             function moveDown() {
-                car.style.transform = 'rotateZ(180deg)'
+                car.style.transform = 'rotateZ(180deg)';
                 car.style.top = car.offsetTop + speed + 'px';
             }
 
@@ -63,6 +66,7 @@
                         moveDown();
                         break;
                 }
+
             }
 
             document.onkeydown = keyDown
