--- a/H5 API/test/indexedDB.html
+++ b/H5 API/test/indexedDB.html
@@ -19,7 +19,7 @@
                     dbStoreName: 'Student'
                 }
                 dbObj.init(dbParams);
-                console.log(dbObj)
+                // console.log(dbObj)
             }
             // 添加数据
             btn[1].onclick = function () {
