--- a/BootStrap/day03/1-模态框.html
+++ b/BootStrap/day03/1-模态框.html
@@ -101,10 +101,10 @@
             </div>
         </div>
     </div>
-    <div class="container">
+ <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12 bg9"><div class="main_style_10"><div class="row brdr_btm"><div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12" align="center"><div class="round9"></div><h4 class="hd7">BEN ADAM</h4><p class="p8">IT Technician</p><p class="p8 pb-3">ACME North America</p></div></div><div class="row pt-1 brdr_btm" id="contact"><div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"><div class="row"><div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 pr-0" align="center"><i class="fa fa-envelope-o"></i></div><div class="col-xl-9 col-lg-9 col-md-9 col-sm-9 col-9 pl-0"><p>beth.anglin@acme.com</p></div></div></div></div><div class="row pt-1 brdr_btm" id="contact"><div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"><div class="row"><div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 pr-0" align="center"><i class="fa fa-phone"></i></div><div class="col-xl-9 col-lg-9 col-md-9 col-sm-9 col-9 pl-0"><p>321-123-4567</p></div></div></div></div><div class="row pt-1 brdr_btm" id="contact"><div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"><div class="row"><div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 pr-0" align="center"><i class="fa fa-mobile"></i></div><div class="col-xl-9 col-lg-9 col-md-9 col-sm-9 col-9 pl-0"><p>321-987-6543</p></div></div></div></div><div class="row pt-1 brdr_btm" id="contact"><div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"><div class="row"><div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 pr-0" align="center"><i class="fa fa-sitemap"></i></div><div class="col-xl-9 col-lg-9 col-md-9 col-sm-9 col-9 pl-0"><p>Customer Support</p></div></div></div></div><div class="row pt-1 brdr_btm" id="contact"><div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12"><div class="row"><div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 col-3 pr-0" align="center"><i class="fa fa-globe"></i></div><div class="col-xl-9 col-lg-9 col-md-9 col-sm-9 col-9 pl-0"><p>San Deigo,CA, US</p></div></div></div></div><div class="row"><div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12" align="center"><button type="button" class="snd"><i class="fa fa-comments-o"></i>Send a direct message</button></div></div></div></div>
         <button class="btn btn-danger" id="add">新增</button>
         <button class="btn btn-primary" id="update">修改</button>
-    </div>
+  
 </body>
 
 </html>
