--- a/H5 API/test/太极图.html
+++ b/H5 API/test/太极图.html
@@ -11,34 +11,34 @@
     window.onload = function () {
         var canvas = document.getElementsByTagName('canvas')[0];
         var context = canvas.getContext('2d');
-        // 左大半圆
+        // 左大半圆(黑)
         context.beginPath();
         context.arc(250, 250, 250, Math.PI / 2, Math.PI * 3 / 2);
         context.fill()
-        // 右大半圆
+        // 右大半圆(白)
         context.arc(250, 250, 250, Math.PI * 3 / 2, Math.PI / 2);
         context.closePath();
         context.stroke();
-
+        // 黑半圆
         context.beginPath();
-        context.arc(250, 375, 125, Math.PI * 3 / 2, Math.PI / 2);
+        context.arc(250, 125, 125, Math.PI * 3 / 2, Math.PI / 2);
         context.closePath();
         context.fill();
-
+        // 白半圆
         context.beginPath();
-        context.arc(250, 125, 125, Math.PI / 2, Math.PI * 3 / 2);
+        context.arc(250, 375, 125, Math.PI / 2, Math.PI * 3 / 2);
         context.fillStyle = 'white';
         context.closePath();
         context.fill();
-
+        // 白小圆
         context.beginPath();
-        context.arc(250, 375, 50, 0, Math.PI * 2);
+        context.arc(250, 125, 50, 0, Math.PI * 2);
         context.closePath();
         context.fill();
-
+        // 黑小圆
         context.beginPath();
         context.fillStyle = 'black';
-        context.arc(250, 125, 50, 0, Math.PI * 2);
+        context.arc(250, 375, 50, 0, Math.PI * 2);
         context.closePath();
         context.fill();
     }
@@ -46,7 +46,7 @@
 <style>
     canvas {
         animation-name: myani;
-        animation-duration: 1s;
+        animation-duration: 3s;
         animation-timing-function: linear;
         animation-iteration-count:infinite
     }
