--- a/看点资讯/index.html
+++ b/看点资讯/index.html
@@ -28,11 +28,14 @@
         <div class="sidebar" data-background-color="white" data-active-color="danger">
 
             <div class="sidebar-wrapper">
+
                 <div class="logo">
+                    <i class="logo-img"></i>
                     <a href="#" class="simple-text">
                         看点咨询
                     </a>
                 </div>
+
 
                 <ul class="nav">
                     <li class="active">
@@ -85,9 +88,10 @@
                             </li>
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                    <i style="position: absolute;top: -5px"><img src="./images/1.jpg" width="50px" alt="" class="img-circle"></i>
+                                    <i style="position: absolute;top: -5px"><img src="./images/1.jpg" width="50px"
+                                            alt="" class="img-circle"></i>
                                     <p style="padding-left: 50px">ZWQ</p>
-                                  
+
                                 </a>
                                 <ul class="dropdown-menu">
                                     <li><a href="#"><i class="glyphicon glyphicon-user"></i> 我的信息 </a></li>
@@ -131,7 +135,8 @@
                         </ul>
                     </nav>
                     <div class="copyright pull-right">
-                        &copy; <script>
+                        &copy;
+                        <script>
                             document.write(new Date().getFullYear())
                         </script>, made by zhangweiqiang
                     </div>
